artifacts/traffic-split/customers-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-v2
  labels:
    app: customers
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers
      version: v2
  template:
    metadata:
      labels:
        app: customers
        version: v2
    spec:
      serviceAccountName: customers
      containers:
      - image: gcr.io/tetratelabs/customers:2.0.0
        imagePullPolicy: Always
        name: svc
        ports:
        - containerPort: 3000
