artifacts/traffic-split/customers-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: customers
spec:
  hostnames:
  - customers.example.com
  parentRefs:
  - name: eg
  rules:
  - backendRefs:
    - name: customers-v1
      port: 80
      weight: 80
    - name: customers-v2
      port: 80
      weight: 20
